--- a/test/fixtures/test_empty.html
+++ b/test/fixtures/test_empty.html
@@ -2,15 +2,36 @@
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <title>pwd export</title>
+  <title>Password Manager Export</title>
   <style type="text/css">
-    table { page-break-inside:auto }
-    tr    { page-break-inside:avoid; page-break-after:auto }
-    thead { display:table-header-group }
-    tfoot { display:table-footer-group }
+    table { page-break-inside:auto}
+    tr    { page-break-inside:avoid; page-break-after:auto}
+    thead { display:table-header-group}
+    tfoot { display:table-footer-group; font-size: 0.85em;}
+
+    /* adapted from http://coding.smashingmagazine.com/2008/08/13/top-10-css-table-designs/ */
+    body{
+      font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
+      font-size: 12px;
+      margin: 45px;
+      width: 480px;
+      border-collapse: collapse;
+      text-align: left;
+    }
+    th{
+      font-size: 14px;
+      font-weight: bold;
+      padding: 10px 8px;
+      border-bottom: 2px solid;
+    }
+    td{
+      border-bottom: 1px solid;
+      padding: 6px 8px;
+    }
   </style>
 </head>
 <body>
+  <h1>Password Manager Export</h1>
   <table>
     <thead>
       <tr>
@@ -20,14 +41,16 @@
     </thead>
     <tfoot>
       <tr>
-        <td>Exported from pwm</td>
-        <td>Last modified: DATE_TIME_STAMP</td>
-        <td></td>
+        <td colspan="2">
+          This <a href="http://rdoc.info/github/nerab/pwm/master/frames">pwm</a> export was created on CREATED_STAMP.
+        <br/>
+          The database at DATABASE_FILE was never modified.
+        </td>
       </tr>
     </tfoot>
     <tbody>
-      
+
     </tbody>
   </table>
-</body>
+  </body>
 </html>
