--- a/test/fixtures/test_empty.html
+++ b/test/fixtures/test_empty.html
@@ -42,7 +42,7 @@
     <tfoot>
       <tr>
         <td colspan="2">
-          This <a href="http://rdoc.info/github/nerab/pwm/master/frames">pwm</a> export was created on CREATED_STAMP.
+          This <a href="http://rdoc.info/github/nerab/pwl/master/frames">pwl</a> export was created on CREATED_STAMP.
         <br/>
           The database at DATABASE_FILE was never modified.
         </td>
