Introduce entry instead of password

--- a/test/fixtures/test_all.html
+++ b/test/fixtures/test_all.html
@@ -50,17 +50,17 @@
     </tfoot>
     <tbody>
 
-      <tr>
+      <tr id="mock-uuid">
         <td>foo</td>
         <td>one</td>
       </tr>
 
-      <tr>
+      <tr id="mock-uuid">
         <td>bar</td>
         <td>two</td>
       </tr>
 
-      <tr>
+      <tr id="mock-uuid">
         <td>Chuck Norris</td>
         <td>Roundhouse Kick</td>
       </tr>
